crates/rulesteward-fapolicyd/tests/snapshots/E04__macro-in-pattern.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[E04] sev=Error line=2 col=1 span=15..45 :: macro reference `%mymacro` not supported in `pattern=` (fapolicyd does not substitute macros here)
